Up date Home page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,10 +25,18 @@ $navbar-default-bg: #075B15;
   
 #logo:hover {
   color: #fff;
-  test-decoration: none;
+  text-decoration: none;
 }
 
-.jumbotron h1, h2{
+.jumbotron h1{
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+
+.jumbotron h2{
   color: #fff;
   text-align: center;
   margin-bottom: 30px;
@@ -44,3 +52,9 @@ $navbar-default-bg: #075B15;
   color: #fff;
   text-decoration: none;
 }
+
+.footer {
+  font-size: 1em;
+  color: #075B15;
+  text-align: center;
+}  
