--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
     <div class="container">
       <%= yield %>
     </div>
+
+    <div class="footer">  
     <%= render 'layouts/footer' %>
+   </div>  
   </body>
 </html>
