Update footer css

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,11 @@
 <footer class="footer">
-  <p>&copy; 2017 Rails course Myrecipes App</p>
+  <small>
+    <strong><a href="http://www.mashrurhossain.com/">Matacode Development Training</a></strong>
+    by <em><a href="http://www.mashrurhossain.com/">Mashrur Hossain</a></em>
+  </small>
+  <nav>
+    <ul>
+      <li><%= link_to "About",   '#' %></li>
+    </ul>
+  </nav>
 </footer>
