--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Myrecipes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,12 +11,10 @@
 
   <body>
     <%= render 'layouts/navigation' %>
+    <%= render 'layouts/messages' %>
     <div class="container">
       <%= yield %>
     </div>
-
-    <div class="footer">  
     <%= render 'layouts/footer' %>
-   </div>  
   </body>
 </html>
