--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    <strong><a href="http://www.mashrurhossain.com/">Matacode Development Training</a></strong>
-    by <em><a href="http://www.mashrurhossain.com/">Mashrur Hossain</a></em>
+    <strong>© 2017 Rails course Myrecipes App</strong>
+    
   </small>
   <nav>
     <ul>
