--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-10 col-md-offset-1">
+  <div class="col-md-12">
     <% flash.each do |name, msg| %>
       <div class="alert alert-<%= name %>">
         <a href="#" class="close" data-dismiss="alert">&#215;</a>
