Add new recipe creation with test

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #073B15;
+$navbar-default-bg: #2ECC60;
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
@@ -93,7 +93,7 @@ footer ul li {
 }
 
 .well a {
-  color: #073B15;
+  color: #2ECC60;
 }
 
 .chef_info {
@@ -101,7 +101,7 @@ footer ul li {
 }
 
 .colormatch a {
-  color: #073B15;
+  color: #2ECC60;
 }
 
 .recipe-actions {
