--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,3 @@
 <%= render 'shared/page_title', title: "showing all recipes" %>
 
-<% @recipes.each do |recipe| %>
-
-  <div class="col-md-8 well">
-      <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
-      <p><%= truncate(recipe.description, length: 150) %></p>
-      
-<% end %>
+<%= render 'recipe', obj: @recipes %>
