--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -86,6 +86,12 @@ footer ul li {
   padding-left: 0;
 }
 
+.chef-title {
+  color: #2ECC60;
+  font-weight: bold;
+  font-size: 1.25em;
+}
+
 .input_checkbox input {
   width: auto !important;
 }
