--- a/app/views/chefs/index.html.erb
+++ b/app/views/chefs/index.html.erb
@@ -1,6 +1,7 @@
 <%= render 'shared/page_title', title: "Showing all chefs" %>
 
 <div align = center>
+  <%= will_paginate %>
   <% @chefs.each do |chef| %>
     <ul class = "listing">
       <div class= "row">
@@ -12,5 +13,5 @@
       </div>
     </ul>
   <% end %>
-  
+  <%= will_paginate %>
 </div>
