--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,5 +1,4 @@
 <% obj.each do |recipe| %>
-
   <div class="row">
     <div class= "col-md-2">
       <section class="chef_info center">
@@ -13,6 +12,14 @@
         <p>
           <span class="quite"<small>Created <%= time_ago_in_words(recipe.created_at) %> ago</small>
         </p>
+        <% if logged_in? && current_chef == recipe.chef %>
+        <div class = "recipe-acctions">
+          <%= link_to "Edit this recipe", edit_recipe_path(recipe), class: "btn btn-xs btn-warning" %>
+          <%= link_to "Delete this recipe", recipe_path(recipe), method: :delete,
+                                        data: { confirm: "Are you sure you want to delete this recipe?" },
+                                        class: "btn btn-xs btn-danger" %>
+        </div>
+        <% end %>
     </div>
   </div>
 <% end %>
