--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -18,7 +18,16 @@
       </div>
       <div class= "col-md-8">
         <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Enter steps to creat recipe" %>
-
+      </div>
+    </div>
+    
+     <div class="form-group">
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8">
+          <%= f.collection_check_boxes :ingredient_ids, Ingredient.all, :id, :name do |cb| %>
+          <% cb.label(class: "checkbox-inline input_checkbox") {cb.check_box(class: "checkbox") + cb.text}%>
+          <%end%>
+        </div>
       </div>
     </div>
     
