--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -5,18 +5,21 @@
   <hr/>
   <%=simple_format(@recipe.description) %>
   <hr/>
-   <div class=" pull-right">
-    <P class= "center">
-      <em>Created by:</em>
-    <p/>
-    <p class= "center">
-      <%=link_to gravatar_for(@recipe.chef), recipe_path %>
-    </p>
-    <P class= "center">
-      <small><%=@recipe.chef.chefname.capitalize %></small>
-      <div class "pull-right"><%= time_ago_in_words(@recipe.created_at)%>ago</div>
-    </p>
-  </div>
+  <% if @recipe.ingredients.any? %>
+    <p>Ingredients: <%= render @recipe.ingredients %></p>
+  <% end %>
+    <div class=" pull-right">
+      <P class= "center">
+        <em>Created by:</em>
+      <p/>
+      <p class= "center">
+        <%=link_to gravatar_for(@recipe.chef), chef_path(@recipe.chef) %>
+      </p>
+      <P class= "center">
+        <small><%=@recipe.chef.chefname.capitalize %></small>
+        <div class "pull-right"><%= time_ago_in_words(@recipe.created_at)%>ago</div>
+      </p>
+    </div>
   
   <div class="recipe-actions">
     <% if logged_in?  && (current_chef == @recipe.chef || current_chef.admin?) %>
