--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,3 +1,4 @@
+<div class="row comment-fix">
 <div align= "center">
   <%= will_paginate comments %>
 </div>
@@ -6,4 +7,5 @@
 <% end %>
 <div align= "center">
   <%= will_paginate comments %>
+</div>
 </div>
