--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,2 +1,2 @@
-<%= render 'shared/page_title', title: "creat a new recipe" %>
+<%= render 'shared/page_title', title: "edit an exiting recipe" %>
 <%= render 'form' %>
