--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,9 @@
 <%= render 'shared/page_title', title: @recipe.name %>
 
 <div class="well col-md-8 col-md-offset-2">
+  <div align="center">
+    <%= image_tag @recipe.image.url if @recipe.image? %>
+  </div>
   <h4 class="center"description"><strong>Steps: </strong></h4>
   <hr/>
   <%=simple_format(@recipe.description) %>
@@ -64,15 +67,30 @@
       <h3>Prior Comments: </h3>
         <div id= "messages">
           <%= render partial: 'comments/comments', object: @comments %>
-      </div>
+        </div>
     </div>
   </div>
 <% else %>
-  <div class= "row"%>
-    <div class= "col-md-8 col-md-offset-2" %>
-      <h3>No Comments Yet</h3>
+  <div class="row">
+    <div class="pull-right liking">
+      <%= link_to like_recipe_path(recipe, like: true), method: :post do %>
+        <i class="glyphicon glyphicon-thumbs-up"></i> 
+      <% end %> <%= recipe.thumbs_up_total %> || 
+      <%= link_to like_recipe_path(recipe, like: false), method: :post do %>
+        <i class="glyphicon glyphicon-thumbs-down"></i>
+      <% end %> <%= recipe.thumbs_down_total %>
     </div>
   </div>
   
-  
 <%end%>
+
+<div class="row liking">
+  <div class="row col-md-8 col-md-offset-2">
+    <%= link_to like_recipe_path(@recipe, like: true), method: :post do %>
+      <i class="glyphicon glyphicon-thumbs-up"></i> 
+    <% end %> ||
+    <%= link_to like_recipe_path(@recipe, like: false), method: :post do %>
+      <i class="glyphicon glyphicon-thumbs-down"></i> 
+    <% end %>
+  </div>
+</div>
